--- a/Simple QR Code Maker/Views/DecodingPage.xaml
+++ b/Simple QR Code Maker/Views/DecodingPage.xaml
@@ -7,15 +7,15 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="using:Simple_QR_Code_Maker.Models"
+    xmlns:toolkitConverters="using:CommunityToolkit.WinUI.Converters"
     Background="{ThemeResource SolidBackgroundFillColorBaseBrush}"
     mc:Ignorable="d">
 
     <Page.Resources>
-        <converters:InvertBoolConverter x:Key="InvertBool" />
         <converters:TextHasURLConverter x:Key="HasURL" />
-        <converters:EmptyCollectionToVisibilityConverter x:Key="EmptyCollectionVisibility" />
-        <converters:NotEmptyCollectionToVisibilityConverter x:Key="NotEmptyCollectionVisibiliy" />
         <converters:IsZeroConverter x:Key="IsZero" />
+        <toolkitConverters:BoolNegationConverter x:Key="BoolNegationConverter" />
+        <toolkitConverters:CollectionVisibilityConverter x:Key="CollectionVisibilityConverter" />
     </Page.Resources>
 
     <Grid>
@@ -101,13 +101,13 @@
                     Orientation="Horizontal"
                     Spacing="12">
                     <Button Command="{x:Bind ViewModel.GoBackCommand}" ToolTipService.ToolTip="Go Back to making QR Code page">
-                        <Viewbox Height="14">
+                        <Viewbox Height="18">
                             <SymbolIcon Symbol="Back" />
                         </Viewbox>
                     </Button>
                     <Button
                         Command="{x:Bind ViewModel.OpenNewFileCommand}"
-                        IsEnabled="{x:Bind ViewModel.OpenNewFileCommand.IsRunning, Mode=OneWay, Converter={StaticResource InvertBool}}"
+                        IsEnabled="{x:Bind ViewModel.OpenNewFileCommand.IsRunning, Mode=OneWay, Converter={StaticResource BoolNegationConverter}}"
                         ToolTipService.ToolTip="Open one or many files to decode the barcodes contained in the image">
                         <StackPanel Orientation="Horizontal" Spacing="8">
                             <Viewbox Height="14">
@@ -129,9 +129,9 @@
                     </Button>
                     <Button
                         Command="{x:Bind ViewModel.ClearImagesCommand}"
-                        IsEnabled="{x:Bind ViewModel.OpenFileFromClipboardCommand.IsRunning, Mode=OneWay, Converter={StaticResource InvertBool}}"
+                        IsEnabled="{x:Bind ViewModel.OpenFileFromClipboardCommand.IsRunning, Mode=OneWay, Converter={StaticResource BoolNegationConverter}}"
                         ToolTipService.ToolTip="Clear out all the images"
-                        Visibility="{x:Bind ViewModel.DecodingImageItems.Count, Converter={StaticResource NotEmptyCollectionVisibiliy}, Mode=OneWay}">
+                        Visibility="{x:Bind ViewModel.DecodingImageItems.Count, Converter={StaticResource CollectionVisibilityConverter}, Mode=OneWay}">
                         <StackPanel Orientation="Horizontal" Spacing="8">
                             <Viewbox Height="16">
                                 <SymbolIcon Symbol="Clear" />
