--- a/Simple QR Code Maker/Views/DecodingPage.xaml
+++ b/Simple QR Code Maker/Views/DecodingPage.xaml
@@ -14,8 +14,8 @@
     <Page.Resources>
         <converters:TextHasURLConverter x:Key="HasURL" />
         <converters:IsZeroConverter x:Key="IsZero" />
+        <converters:EmptyCollectionToVisibilityConverter x:Key="EmptyCollectionToVisibility" />
         <toolkitConverters:BoolNegationConverter x:Key="BoolNegationConverter" />
-        <toolkitConverters:CollectionVisibilityConverter x:Key="CollectionVisibilityConverter" />
     </Page.Resources>
 
     <Grid>
@@ -131,7 +131,7 @@
                         Command="{x:Bind ViewModel.ClearImagesCommand}"
                         IsEnabled="{x:Bind ViewModel.OpenFileFromClipboardCommand.IsRunning, Mode=OneWay, Converter={StaticResource BoolNegationConverter}}"
                         ToolTipService.ToolTip="Clear out all the images"
-                        Visibility="{x:Bind ViewModel.DecodingImageItems.Count, Converter={StaticResource CollectionVisibilityConverter}, Mode=OneWay}">
+                        Visibility="{x:Bind ViewModel.DecodingImageItems.Count, Converter={StaticResource EmptyCollectionToVisibility}, ConverterParameter=true, Mode=OneWay}">
                         <StackPanel Orientation="Horizontal" Spacing="8">
                             <Viewbox Height="16">
                                 <SymbolIcon Symbol="Clear" />
