Create and use ScanIcon

--- a/Simple QR Code Maker/Views/MainPage.xaml
+++ b/Simple QR Code Maker/Views/MainPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:converters="using:Simple_QR_Code_Maker.Converters"
+    xmlns:controls="using:Simple_QR_Code_Maker.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="using:Simple_QR_Code_Maker.Models"
@@ -267,7 +268,7 @@
                             <Button Command="{x:Bind ViewModel.OpenFileCommand}" ToolTipService.ToolTip="Open an image to read and extract text from any codes">
                                 <StackPanel Orientation="Horizontal" Spacing="10">
                                     <Viewbox Height="16">
-                                        <FontIcon FontFamily="{ThemeResource SymbolThemeFontFamily}" Glyph="&#xEE6F;" />
+                                        <controls:ScanIcon />
                                     </Viewbox>
                                     <TextBlock Text="Read Codes" />
                                 </StackPanel>
